syntax = "proto3";

package wallet;
import "auth_options.proto";
import "base.proto";

option java_package = "com.melli.wallet.grpc";
option java_multiple_files = true;
option java_outer_classname = "LimitationProto";

service LimitationService {
  rpc GetLimitationValue(GetLimitationValueRequestGrpc) returns (BaseResponseGrpc) {
    option (required_resource) = "LIMITATION_LIST";
  }
  rpc GetLimitationList(GetLimitationListRequestGrpc) returns (BaseResponseGrpc) {
    option (required_resource) = "LIMITATION_LIST";
  }
}

message GetLimitationValueRequestGrpc {
  string limitation_name = 1;
  string account_number = 2;
  string national_code = 3;
}

message GetLimitationListRequestGrpc {

}